--- a/7.2/configs/app.conf
+++ b/7.2/configs/app.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
   ServerAdmin admin@localhost
-  ServerName app
+  ServerName bitrix.loc
   #ServerAlias www.app
-  DocumentRoot /var/www/app
+  DocumentRoot /home/bitrix/www
 
- <Directory /var/www/app>
+ <Directory /home/bitrix/www>
     Options FollowSymLinks
     AllowOverride None
     AddDefaultCharset utf-8
