--- a/7.2/configs/app.conf
+++ b/7.2/configs/app.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerAdmin admin@localhost
+  ServerAdmin prokh.sergey@gmail.com
   ServerName bitrix.loc
   #ServerAlias www.app
   DocumentRoot /home/bitrix/www
